[gd_scene load_steps=25 format=3 uid="uid://ccwiql3bybf2p"]

[ext_resource type="Script" uid="uid://ddvtpbrhc2iw1" path="res://Game Elements/Objects/pathway.gd" id="1_0mqoo"]
[ext_resource type="Texture2D" uid="uid://4kec172p2w3c" path="res://art/closed_room_reward.png" id="2_okald"]
[ext_resource type="Texture2D" uid="uid://jauot8cjpgbk" path="res://art/white_dot.png" id="6_rjdqg"]
[ext_resource type="Shader" uid="uid://c7aprdgds5kpc" path="res://Game Elements/Shaders/chromatic_abberation.gdshader" id="6_x3etk"]
[ext_resource type="Texture2D" uid="uid://dsg1hqhbidk6m" path="res://art/particles/gradiant_dot.png" id="8_hgkmx"]

[sub_resource type="Gradient" id="Gradient_x3etk"]
offsets = PackedFloat32Array(0.2647059, 0.5392157, 1)
colors = PackedColorArray(0.88733417, 0.64631766, 0.35203508, 1, 0.7655881, 0.4938748, 0, 0.81960785, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_hgkmx"]
gradient = SubResource("Gradient_x3etk")

[sub_resource type="Curve" id="Curve_f0d0v"]
_data = [Vector2(0.0043478236, 0), 0.0, 12.662923, 0, 0, Vector2(0.26521742, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_1vvwv"]
curve = SubResource("Curve_f0d0v")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bamh0"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 6.0
emission_ring_inner_radius = 0.0
emission_ring_cone_angle = 90.0
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 50.0
gravity = Vector3(0, 0, 0)
radial_accel_min = -20.000002
radial_accel_max = -20.000002
tangential_accel_min = -50.0
tangential_accel_max = -50.0
scale_min = 0.099999994
scale_max = 0.29999998
scale_curve = SubResource("CurveTexture_1vvwv")
color_ramp = SubResource("GradientTexture1D_hgkmx")

[sub_resource type="Gradient" id="Gradient_hgkmx"]
offsets = PackedFloat32Array(0.2647059, 0.5392157, 1)
colors = PackedColorArray(0.94686705, 0.4836762, 0.99999994, 1, 0.87058824, 0, 0.98039216, 0.81960785, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5ec6i"]
gradient = SubResource("Gradient_hgkmx")

[sub_resource type="Curve" id="Curve_ccisr"]
_data = [Vector2(0.0043478236, 0), 0.0, 12.662923, 0, 0, Vector2(0.26521742, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_ccisr"]
curve = SubResource("Curve_ccisr")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1vvwv"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 18.0
emission_ring_inner_radius = 0.0
emission_ring_cone_angle = 90.0
spread = 180.0
initial_velocity_min = 25.0
initial_velocity_max = 25.0
gravity = Vector3(0, 0, 0)
radial_accel_min = -20.000002
radial_accel_max = -20.000002
tangential_accel_min = 39.999996
tangential_accel_max = 39.999996
scale_max = 2.0
scale_curve = SubResource("CurveTexture_ccisr")
color_ramp = SubResource("GradientTexture1D_5ec6i")

[sub_resource type="CircleShape2D" id="CircleShape2D_okald"]
radius = 32.0

[sub_resource type="Gradient" id="Gradient_rjdqg"]
offsets = PackedFloat32Array(0.2647059, 0.5392157, 1)
colors = PackedColorArray(0.88733417, 0.64631766, 0.35203508, 1, 0.7655881, 0.4938748, 0, 0.81960785, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rjdqg"]
gradient = SubResource("Gradient_rjdqg")

[sub_resource type="Curve" id="Curve_hgkmx"]
_data = [Vector2(0, 0.28089893), 0.0, 5.0165224, 0, 0, Vector2(0.13043478, 0.9550562), 0.0, 0.0, 0, 0, Vector2(0.9826088, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_5ec6i"]
curve = SubResource("Curve_hgkmx")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ccisr"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 18.0
emission_ring_inner_radius = 0.0
emission_ring_cone_angle = 90.0
spread = 180.0
initial_velocity_min = 25.0
initial_velocity_max = 25.0
gravity = Vector3(0, 0, 0)
radial_accel_min = -20.000002
radial_accel_max = -20.000002
tangential_accel_min = -40.0
tangential_accel_max = -40.0
scale_max = 2.0
scale_curve = SubResource("CurveTexture_5ec6i")
color_ramp = SubResource("GradientTexture1D_rjdqg")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hgkmx"]
shader = ExtResource("6_x3etk")
shader_parameter/aberration_strength = 0.002
shader_parameter/mask_intensity = 1.0

[sub_resource type="ViewportTexture" id="ViewportTexture_dp20r"]
viewport_path = NodePath("MaskViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_okald"]

[node name="Root" type="Node2D" groups=["pathway"]]
z_index = 39
y_sort_enabled = true
script = ExtResource("1_0mqoo")

[node name="MaskViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
size = Vector2i(128, 128)
render_target_update_mode = 4

[node name="RiftWisps_OrangeNew" type="GPUParticles2D" parent="MaskViewport"]
position = Vector2(64, 64)
amount = 300
texture = ExtResource("6_rjdqg")
lifetime = 1.5
process_material = SubResource("ParticleProcessMaterial_bamh0")

[node name="RiftWisps_Purple" type="GPUParticles2D" parent="MaskViewport"]
position = Vector2(64, 64)
amount = 100
texture = ExtResource("8_hgkmx")
lifetime = 2.0
process_material = SubResource("ParticleProcessMaterial_1vvwv")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_okald")

[node name="RiftWisps_OrangeOld" type="GPUParticles2D" parent="."]
visible = false
position = Vector2(240, 69)
amount = 100
texture = ExtResource("8_hgkmx")
lifetime = 2.0
process_material = SubResource("ParticleProcessMaterial_ccisr")

[node name="ShaderSprite" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_hgkmx")
texture = SubResource("ViewportTexture_dp20r")

[node name="Prompt2" type="Node2D" parent="."]
z_index = 1000
scale = Vector2(3, 3)

[node name="Text" type="RichTextLabel" parent="Prompt2"]
offset_left = -22.0
offset_top = -32.999996
offset_right = 1078.0
offset_bottom = 142.0
scale = Vector2(0.04, 0.04)
theme_override_font_sizes/normal_font_size = 128
bbcode_enabled = true
text = ": Reroll for 500"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Prompt2"]
offset_left = 18.333334
offset_top = -34.0
offset_right = 168.33333
offset_bottom = 116.0
scale = Vector2(0.06, 0.06)
metadata/_edit_use_anchors_ = true

[node name="Prompt1" type="Node2D" parent="."]
z_index = 1000
scale = Vector2(3, 3)

[node name="Text" type="RichTextLabel" parent="Prompt1"]
offset_left = -14.666667
offset_top = -23.333334
offset_right = 718.6666
offset_bottom = 151.66667
scale = Vector2(0.04, 0.04)
theme_override_font_sizes/normal_font_size = 128
bbcode_enabled = true
text = ": Enter"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="Icons" type="Node2D" parent="."]

[node name="PathwayIcon1" type="Sprite2D" parent="Icons"]
z_index = -1
texture = ExtResource("2_okald")

[node name="PathwayIcon2" type="Sprite2D" parent="Icons"]
z_index = -1
material = SubResource("ShaderMaterial_okald")
texture = ExtResource("2_okald")
